--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/existingNew_acc_opening.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/existingNew_acc_opening.xhtml
@@ -6,133 +6,113 @@
 				xmlns:pe="http://primefaces.org/ui/extensions"
 				template="/template/common/template.xhtml">
 
-	<f:metadata>
-		<f:viewParam name="acct" value="#{uobpos.acctnum}"/>
-		<f:event type="preRenderView" listener="#{uobpos.preRenderView}"/>
-	</f:metadata>
-
 	<ui:define name="content">
-		<h:outputScript name="js/invCharts.js" library="#{uiLayout.webProfile.cssdir}"/>
-		<h:form>
 
-			<div class="layout-portlets-box">
-				<div class="Container100 Responsive100 acc_holder_form">
-					<div class="ContainerIndent">
+		<div class="layout-portlets-box open_client_layout acc_holder_form" >
+			<div class="Container100 Responsive50">
 
-						<p:accordionPanel multiple="true" styleClass="marginZero">
-							<p:tab title="Account Type">
-								<div class="go-bottom">
-									<div class="Container100">
-										<div class="Container70">
-											<div class="Container100">
-												<span class="title_line">Do you have an existing Securities Trading account on UOBKH? </span></div>
-										</div>
-										<div class="Container20 label_opacity">
-											<p:selectOneRadio id="radiotype" value="" >
-												<f:selectItem itemLabel="Yes" itemValue="value1" ></f:selectItem>
-												<f:selectItem itemLabel="No" itemValue="value2" ></f:selectItem>
-											</p:selectOneRadio>
-										</div>
-									</div>
-									<div class="Container100">
-										<div class="Container70">
-											<div class="Container100">
-												<span class="title_line">Is it Individual Account? </span>
-											</div>
-											<div class="Container70 margin-top">
-												<input id="exAccName" name="exAccName" type="text" placeholder="Enter your existing  Securities Trading account number"/>
-												<label for="exAccName">Securities Trading account number</label>
-											</div>
-										</div>
-										<div class="Container20 label_opacity">
-											<p:selectOneRadio id="radiotype1" value="" >
-												<f:selectItem itemLabel="Yes" itemValue="value1" ></f:selectItem>
-												<f:selectItem itemLabel="No" itemValue="value2" ></f:selectItem>
-											</p:selectOneRadio>
-										</div>
-									</div>
-									<div class="Container100 margin-top ">
-										<div class="Container70">
-											<div class="Container100">
-												<span class="title_line">Is it Joint-Alternate Account? </span>
-											</div>
-											<div class="Container70 margin-top">
-												<input id="exAccName" name="exAccName" type="text" placeholder="Enter your existing Joint UOBKH account number"/>
-												<label for="exAccName">Joint UOBKH account number</label>
-											</div>
-										</div>
-										<div class="Container20 label_opacity">
-											<p:selectOneRadio id="radiotype2" value="" >
-												<f:selectItem itemLabel="Yes" itemValue="value1" ></f:selectItem>
-												<f:selectItem itemLabel="No" itemValue="value2" ></f:selectItem>
-											</p:selectOneRadio>
-										</div>
-									</div>
+				<p:panel id="acc_type" header="Account Type" >
 
-
-
-									<div class="Container100 margin-top">
-										<span class="title_line">What type of account would you like to open?</span>
-									</div>
-
-									<div class="Container100 account_type_block">
-										<p:panel id="uobacctype" styleClass="Container50">
-											<div class="Container80 label_opacity">
-												<label>Individual Account</label>
-											</div>
-											<div class="Container10 textAlign">
-												<p:selectOneRadio id="radio" value="" >
-													<f:selectItem itemLabel="" itemValue="value1" ></f:selectItem>
-
-												</p:selectOneRadio>
-											</div>
-										</p:panel>
-										<p:panel id="uobjointacctype" styleClass="Container50">
-											<div class="Container80 label_opacity">
-												<label>Joint - Alternate Account</label>
-											</div>
-											<div class="Container10 textAlign">
-												<p:selectOneRadio id="radio1" value="" >
-													<f:selectItem itemLabel="" itemValue="value1" ></f:selectItem>
-
-												</p:selectOneRadio>
-											</div>
-										</p:panel>
-									</div>
-
-
-
-
-									<div class="Container100 pre_next_btn">
-										<!-- <div class="Container50 pre_btn">
-                                            <span class="ui-button-icon-center ui-icon ui-c fa fa-edit fa-chevron-left"></span>
-                                        </div> -->
-										<div class="Container50 next_btn">
-											<span class="ui-button-icon-center ui-icon ui-c fa fa-chevron-right"></span>
-										</div>
-
-									</div>
+					<div class="go-bottom">
+						<div class="Container100">
+							<div class="Container70">
+								<div class="Container100">
+									<span class="title_line">Do you have an existing Securities Trading account on UOBKH? </span></div>
+							</div>
+							<div class="Container20 label_opacity">
+								<p:selectOneRadio id="radiotype" value="" >
+									<f:selectItem itemLabel="Yes" itemValue="value1" ></f:selectItem>
+									<f:selectItem itemLabel="No" itemValue="value2" ></f:selectItem>
+								</p:selectOneRadio>
+							</div>
+						</div>
+						<div class="Container100">
+							<div class="Container70">
+								<div class="Container100">
+									<span class="title_line">Is it Individual Account? </span>
 								</div>
-							</p:tab>
+								<div class="Container70 margin-top">
+									<input id="exAccName" name="exAccName" type="text" placeholder="Enter your existing  Securities Trading account number"/>
+									<label for="exAccName">Securities Trading account number</label>
+								</div>
+							</div>
+							<div class="Container20 label_opacity">
+								<p:selectOneRadio id="radiotype1" value="" >
+									<f:selectItem itemLabel="Yes" itemValue="value1" ></f:selectItem>
+									<f:selectItem itemLabel="No" itemValue="value2" ></f:selectItem>
+								</p:selectOneRadio>
+							</div>
+						</div>
+						<div class="Container100 margin-top ">
+							<div class="Container70">
+								<div class="Container100">
+									<span class="title_line">Is it Joint-Alternate Account? </span>
+								</div>
+								<div class="Container70 margin-top">
+									<input id="exAccName" name="exAccName" type="text" placeholder="Enter your existing Joint UOBKH account number"/>
+									<label for="exAccName">Joint UOBKH account number</label>
+								</div>
+							</div>
+							<div class="Container20 label_opacity">
+								<p:selectOneRadio id="radiotype2" value="" >
+									<f:selectItem itemLabel="Yes" itemValue="value1" ></f:selectItem>
+									<f:selectItem itemLabel="No" itemValue="value2" ></f:selectItem>
+								</p:selectOneRadio>
+							</div>
+						</div>
+
+
+
+						<div class="Container100 margin-top">
+							<span class="title_line">What type of account would you like to open?</span>
+						</div>
+
+						<div class="Container100 account_type_block">
+							<p:panel id="uobacctype" styleClass="Container50">
+								<div class="Container80 label_opacity">
+									<label>Individual Account</label>
+								</div>
+								<div class="Container10 textAlign">
+									<p:selectOneRadio id="radio" value="" >
+										<f:selectItem itemLabel="" itemValue="value1" ></f:selectItem>
+
+									</p:selectOneRadio>
+								</div>
+							</p:panel>
+							<p:panel id="uobjointacctype" styleClass="Container50">
+								<div class="Container80 label_opacity">
+									<label>Joint - Alternate Account</label>
+								</div>
+								<div class="Container10 textAlign">
+									<p:selectOneRadio id="radio1" value="" >
+										<f:selectItem itemLabel="" itemValue="value1" ></f:selectItem>
+
+									</p:selectOneRadio>
+								</div>
+							</p:panel>
+						</div>
 
 
 
 
-						</p:accordionPanel>
-						<!--<div class="Container20 Responsive100 submit_acc_dtl">
-							<h:form>
-								<p:commandButton id="uobSubmitBtn"
-												 value="Submit Account Details"
-												 styleClass="uob_button"
-												 actionListener="#{uobpb.investnow}">
-								</p:commandButton>
+						<div class="Container100 pre_next_btn">
+							<!-- <div class="Container50 pre_btn">
+                                <span class="ui-button-icon-center ui-icon ui-c fa fa-edit fa-chevron-left"></span>
+                            </div> -->
+							<div class="Container50 next_btn">
+								<span class="ui-button-icon-center ui-icon ui-c fa fa-chevron-right"></span>
+							</div>
 
-							</h:form>
-						</div>-->
+						</div>
 					</div>
-				</div>
-			</div>
-		</h:form>
 
+				</p:panel>
+
+
+
+			</div>
+
+		</div>
 	</ui:define>
+
 </ui:composition>
