--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/existingNew_acc_opening.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/existingNew_acc_opening.xhtml
@@ -41,8 +41,9 @@
 									<f:selectItem itemLabel="Yes" itemValue="value1" ></f:selectItem>
 									<f:selectItem itemLabel="No" itemValue="value2" ></f:selectItem>
 								</p:selectOneRadio>
-							</div>
+							</div>-
 						</div>
+
 						<div class="Container100 margin-top ">
 							<div class="Container70">
 								<div class="Container100">
@@ -62,7 +63,10 @@
 						</div>
 
 
-
+						<div class="Container50 margin-top ">
+							<input id="Sperson_name" name="Sperson_name" type="text" placeholder="Sales Person Name"/>
+							<label for="Sperson_name">Sales Person Name</label>
+						</div>
 						<div class="Container100 margin-top">
 							<span class="title_line">What type of account would you like to open?</span>
 						</div>
