--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/existing_acc_opening.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/existing_acc_opening.xhtml
@@ -93,27 +93,27 @@
 														</div>
 													</div>
 												</div>
-												<div class="acc_holder_dtl_block">
+												<div class="acc_holder_dtl_block contact_dtl_block">
 													<div class="Container50 Responsive100">
 														<div class="Container20 Responsive100">
-
+															<span class="for_res title_line">Country Code</span>
 															<input id="countrycode" name="countrycode" type="text" placeholder=""/>
 															<!-- <label for="offTel">Office Tel No</label>	 -->
 														</div>
 														<div class="Container80 Responsive100">
-
+															<span class="for_res title_line">Area Code / Number</span>
 															<input id="offTel" name="offTel" type="text" placeholder="Office Tel No"/>
 															<label for="offTel">Office Tel No</label>
 														</div>
 													</div>
 													<div class="Container50 Responsive100">
 														<div class="Container20 Responsive100">
-
+															<span class="for_res title_line">Country Code</span>
 															<input id="countrycode" name="countrycode" type="text" placeholder=""/>
 															<!-- <label for="offTel">Office Tel No</label>	 -->
 														</div>
 														<div class="Container80 Responsive100">
-
+															<span class="for_res title_line">Area Code / Number</span>
 															<input id="faxTel" name="faxTel" type="text" placeholder="Fax No"/>
 															<label for="faxTel">Fax No</label>
 														</div>
@@ -137,9 +137,11 @@
 														<p:selectOneMenu id="jointtitle" value="Select Title" name="title" >
 															<f:selectItem itemLabel="Select Title" itemValue="" />
 															<f:selectItem itemLabel="Dr" itemValue="Dr" />
+															<f:selectItem itemLabel="Professor" itemValue="Professor" />
 															<f:selectItem itemLabel="Mr" itemValue="Mr" />
 															<f:selectItem itemLabel="Mrs" itemValue="Mrs" />
 															<f:selectItem itemLabel="Miss" itemValue="Miss" />
+															<f:selectItem itemLabel="Mdm" itemValue="Mdm" />
 														</p:selectOneMenu>
 
 													</div>
@@ -154,11 +156,12 @@
 
 												<div class="acc_holder_dtl_block ">
 
-
-													<div class="Container25 Responsive100 pass_nric_no" >
-														<input id="jointnric" name="nric" type="text" placeholder="NRIC / Passport Number"/>
-														<label for="nric">NRIC / Passport Number</label>
+													<div class="Container100 Responsive100 margin-top width99" >
+														<input id="jointnric" name="nric" type="text" placeholder="NRIC Number"/>
+														<label for="nric">NRIC /Passport Number</label>
 													</div>
+
+
 
 												</div>
 												<div class="acc_holder_dtl_block contact_dtl_block">
@@ -191,34 +194,34 @@
 														</div>
 													</div>
 												</div>
-												<div class="acc_holder_dtl_block">
+												<div class="acc_holder_dtl_block contact_dtl_block">
 													<div class="Container50 Responsive100">
 														<div class="Container20 Responsive100">
-
+															<span class="for_res title_line">Country Code</span>
 															<input id="jointcountrycode" name="countrycode" type="text" placeholder=""/>
 															<!-- <label for="offTel">Office Tel No</label>	 -->
 														</div>
 														<div class="Container80 Responsive100">
-
+															<span class="for_res title_line">Area Code / Number</span>
 															<input id="jointoffTel" name="offTel" type="text" placeholder="Office Tel No"/>
 															<label for="offTel">Office Tel No</label>
 														</div>
 													</div>
 													<div class="Container50 Responsive100">
 														<div class="Container20 Responsive100">
-
+															<span class="for_res title_line">Country Code</span>
 															<input id="jointcountrycode" name="countrycode" type="text" placeholder=""/>
 															<!-- <label for="offTel">Office Tel No</label>	 -->
 														</div>
 														<div class="Container80 Responsive100">
-
+															<span class="for_res title_line">Area Code / Number</span>
 															<input id="jointfaxTel" name="faxTel" type="text" placeholder="Fax No"/>
 															<label for="faxTel">Fax No</label>
 														</div>
 													</div>
 												</div>
 												<div class="acc_holder_dtl_block">
-													<div class="Container100">
+													<div class="Container100 width99">
 														<input id="jointemailadd" name="emailadd" type="text" placeholder="Email Address"/>
 														<label for="emailadd">Email Address</label>
 													</div>
@@ -245,9 +248,9 @@
 							<p:tab title="Tax Residence Information">
 								<div class="Container100 Responsive100 holder_address acc_holder_form ">
 									<p:tabView>
-										<p:tab title="Main Account Holder">
+										<p:tab title="Main Account Holder ">
 
-											<div class="go-bottom">
+											<div class="go-bottom tax_info">
 
 												<div class="Container10 add_tax_info ">
 													<p:commandButton id="uobAddBtn"
@@ -276,7 +279,7 @@
 													</p:dataTable>
 												</div>
 
-												<div class="Container100 panel_block acc_panel_block">
+												<div class="Container100 panel_block acc_panel_block margin-top">
 													<div class="panel_close">
 														<span class="ui-button-icon-center ui-icon ui-c fa fa-close"></span>
 													</div>
@@ -357,7 +360,8 @@
 										<!-- joint account holder tab -->
 										<p:tab title="Joint Account Holder">
 
-											<div class="go-bottom">
+											<div class="go-bottom tax_info">
+
 												<div class="Container10 add_tax_info ">
 													<p:commandButton id="jointuobAddBtn"
 																	 value="Add"
@@ -385,17 +389,16 @@
 													</p:dataTable>
 												</div>
 
-												<div class="Container100 panel_block acc_panel_block">
+												<div class="Container100 panel_block acc_panel_block acc_panel_block">
 													<div class="panel_close">
 														<span class="ui-button-icon-center ui-icon ui-c fa fa-close"></span>
 													</div>
 													<div class="Container60 Responsive100 select_item">
-														<div class="Container100"><span class="title_line">Jurisdiction / Country Of Tax</span></div>
-														<p:selectOneMenu id="jointconutry1" value="Select Jurisdiction / Country Of Tax " >
+														<div class="Container100"><span class="title_line">Country / Jurisdiction Of Tax Residence</span></div>
+														<p:selectOneMenu id="jointconutry1" value="Country / Jurisdiction Of Tax Residence " >
 															<f:selectItem itemLabel="Select Jurisdiction / Country Of Tax" itemValue="" />
-															<f:selectItem itemLabel="Country1" itemValue="Country1" />
-															<f:selectItem itemLabel="Country2" itemValue="Country2" />
-															<f:selectItem itemLabel="Country3" itemValue="Country3" />
+															<f:selectItem itemLabel="Singapore" itemValue="Singapore" />
+															<f:selectItem itemLabel="Malaysia" itemValue="Malaysia" />
 														</p:selectOneMenu>
 
 													</div>
@@ -404,7 +407,7 @@
 														<div class="Container100 select_item">
 															<div class="Container40 Responsive100 label_opacity radio_label">
 																<div class="Container60 ">
-																	<span class="title_line"> Have Tax Identification Number ?</span>
+																	<span class="title_line">Have Tax Identification Number ?</span>
 																</div>
 																<div class="Container40">
 																	<p:selectOneRadio id="jointradio" value="" >
@@ -418,39 +421,21 @@
 																<label for="taxId">Tax Identification Number</label>
 															</div>
 														</div>
-														<!-- <div class="Container100 select_item">
-                                                            <div class="Container30 Responsive30 label_opacity radio_label">
-                                                                <div class="Container50">
-                                                                    Have citizenship ?
-                                                                </div>
-                                                                <div class="Container40">
-                                                                    <p:selectOneRadio id="jointradio1" value="" >
-                                                                        <f:selectItem itemLabel="Yes" itemValue="value1" ></f:selectItem>
-                                                                        <f:selectItem itemLabel="No" itemValue="value1" ></f:selectItem>
-                                                                    </p:selectOneRadio>
-                                                                </div>
 
-                                                            </div>
-                                                            <div class="Container60 Responsive100">
-                                                                <input id="jointcityId" name="cityId" type="text" placeholder="Citizenship Id"/>
-                                                                <label for="cityId">Citizenship Id</label>
-                                                            </div>
-
-                                                        </div> -->
 														<div class="Container100 Responsive100 label_opacity radio_select">
 															<p:selectOneRadio id="jointradio3" value="" >
-																<f:selectItem itemLabel="The country where the Account Holder is resident does not issue Tax Identification Number to its resident" itemValue="value1" ></f:selectItem>
+																<f:selectItem itemLabel="A. The country/jurisdiction where the Account Holder is resident does not issue Tax Identification Number(s) to its residents" itemValue="value1" ></f:selectItem>
 															</p:selectOneRadio>
 															<p:selectOneRadio id="jointradio4" value="" >
-																<f:selectItem itemLabel="The Account Holder is otherwise unenable to obtain a Tax Identification Number or equivalent (Please Explain)" itemValue="value1" ></f:selectItem>
+																<f:selectItem itemLabel="B. The Account Holder is otherwise unable to obtain a Tax Identification Number or equivalent number (Please explain why you are unable to obtain a Tax Identification Number in the below table if you have selected this reason)" itemValue="value1" ></f:selectItem>
 															</p:selectOneRadio>
 															<input id="jointexplain" name="explain" type="text" placeholder="Explain"/>
 															<p:selectOneRadio id="jointradio5" value="" class="last_radio">
-																<f:selectItem itemLabel="No Tax Identification Number require as th domestic law of the relevant jurisdiction does not require the collection of the Tax Identification Number issued by such jurisdiction " itemValue="value1" ></f:selectItem>
+																<f:selectItem itemLabel="C. No Tax Identification Number is required as the domestic law of relevant jurisdiction does not require the collection of the Tax Identification Number issues by such jurisdiction " itemValue="value1" ></f:selectItem>
 															</p:selectOneRadio>
 														</div>
 														<h:form class="tax_info_btn">
-															<p:commandButton id="uobSaveBtn"
+															<p:commandButton id="jointuobSaveBtn"
 																			 value="Save"
 																			 styleClass="uob_button save_btn"
 																			 actionListener="#{uobpb.investnow}">
@@ -478,19 +463,6 @@
 
 								</div>
 							</p:tab>
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 						</p:accordionPanel>
 						<div class="Container20 Responsive100 submit_acc_dtl">
