--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/risk_portfolio.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/risk_portfolio.xhtml
@@ -27,7 +27,7 @@
 					<h:form id="form">
 
 						<p:ring id="custom" value="#{ringView.cars}" var="cars" styleClass="image-ring" easing="easeInOutBack">
-							<p:graphicImage name="images/portfolio/education.png" library="#{uiLayout.webProfile.cssdir}" width="100px"/>
+							<p:graphicImage name="images/portfolio/property.png" library="#{uiLayout.webProfile.cssdir}" width="100px"/>
 
 						</p:ring>
 
@@ -40,16 +40,14 @@
 
 						<p:tab >
 							<div class="header_tab">
-								<div class="header_title Container30">Goal</div>
-								<div class="header_link next_btn Container70" ><a href="#">Next > </a></div>
+								<div class="header_title Container30">Saving to purchase a property</div>
+								<div class="header_link next_btn Container60" ><a href="#">Next > </a></div>
 							</div>
 							<div class="Container100 tab_dtl">
 								<p>
-									Hi, what is your full name ?<input type="text" placeholder="Enter Your Full Name"></input>
+									I aim to save and invest for purchasing a property in <input width="100" type="text" placeholder="Years"></input> years
 								</p>
-								<p>
-									<span class="input_value">Sam</span> , what is your e-mail address?<input type="text" placeholder="Enter Your Email"></input>
-								</p>
+
 							</div>
 
 						</p:tab>
