--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/portfolioDemo/portfolio_intro.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/portfolioDemo/portfolio_intro.xhtml
@@ -7,7 +7,7 @@
                 template="/template/common/template.xhtml">
 
 	<f:metadata>
-		<f:event type="preRenderView" listener="#{ringView.preRenderView}"/>
+		<f:event type="preRenderView" listener="#{uobProfileBean.preRenderView}"/>
 	</f:metadata>
     <ui:define name="content">
 
@@ -26,9 +26,10 @@
 
 				<h:form id="form">
 					
-					<p:ring id="custom" value="#{ringView.cars}" var="cars" styleClass="image-ring" easing="easeInOutBack">
-        				<p:graphicImage name="images/portfolio/education1.png" library="#{uiLayout.webProfile.cssdir}" width="100px"/>
-        				<p:outputPanel style="text-align: center;" layout="block">Education</p:outputPanel>
+					<p:ring id="custom" value="#{uobProfileBean.goalsdata}" var="goal"
+							styleClass="image-ring" easing="easeInOutBack">
+        				<p:graphicImage name="#{goal.imagepath}" library="#{uiLayout.webProfile.cssdir}" width="100px"/>
+        				<p:outputPanel style="text-align: center;" layout="block">#{goal.name}</p:outputPanel>
     					
     				</p:ring>
 
